--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <center><strong><h1>This is the homework Ms.Moreno assigned. (cookbook) This is mine, feel free to copy this</h1></strong></center>
  <h2>My Cookbook 
 By Aaron Elliott                                                                                                   Period 3 
-  Culinary Arts </h2> 
+  Culinary Arts| </h2> 
 
 <p>Directions: Pillsbury Cinnamon Rolls 
 Heat oven to 400 degrees Fahrenheit. Grease round cake pan. Place rolls in pan, cinnamon topping up. Bake 13 to 17 minutes or until golden brown. Spread with icing. Faster bake method: Place rolls 2 inches apart on greased cookie sheet. Bake 8 to 10 minutes at temperature above. Keep dough refrigerated. 
 
 ------------------------------------------------------------------------------------------------------------------------------------------ 
 
-Directions: Kool-Aide 
+|Directions: Kool-Aide 
 
 Measure Kool-Aid mix into cap just to line. Do not overfill or Mound. Pour into plastic or glass picture. Add cold water and ice. Stir to dissolve. Store prepared beverage, covered, and refrigerator. Do not prepare or store in metal container. Since contents May settle during shipping turn canister over and shake before using. Replace dry cap and tightly-closed canister to retain freshness. Servings is 8 fluid oz - use this much Kool-Aid drink mix - add cold water and ice: 1 - rounded teaspoon dash 1 Cup. 4 - to 1 – court line - 1 Q. 8 - 2 2 - court line - 2 quarts. 16-  to2 - Court line 2x - 1 gallon.] 
 
 ------------------------------------------------------------------------------------------------------------------------------------------ 
 
-Directions: Pumpkin Pie with Crust 
+|Directions: Pumpkin Pie with Crust 
 Heat oven to 350 degrees Fahrenheit. Whisk pumpkin, sweetened condensed milk, eggs, pumpkin pie spice. Pour into crust. Bake 55 minutes or until knife inserted 1-inch from crust comes out clean. Cool. Garnish as desired. Yield 8 servings. 
 Ingredients: 
 115 Oz canned pumpkin to cups one 14oz can Eagle brand sweetened condensed milk two large eggs 2 teaspoon pumpkin pie spice one 6 Oz package graham cracker pie crust 
 
 ------------------------------------------------------------------------------------------------------------------------------------------ 
 
-Directions: Marshmallow Sweet Potato Bake 
+|Directions: Marshmallow Sweet Potato Bake 
 1. Preheat oven to 350 degrees Fahrenheit. Cote 3-quart casserole dish with a cooking spray.  
 
 2. In a large bowl, combine all ingredients except marshmallows; mix well. Spoon into casserole dish 
@@ -37,7 +37,7 @@ Ingredients:
 ------------------------------------------------------------------------------------------------------------------------------------------ 
   
 
-Directions: Soft Sugar Cookies IV 
+|Directions: Soft Sugar Cookies IV 
 1. Preheat oven to 350° Fahrenheit  
 
 2. in a medium Bowl, cream together the, shortening sugar. Stir the eggs and vanilla combine the flour, baking powder and salt stir into creamed mixture until dough comes together. Roll dough and two walnut-sized balls and roll the balls in Sugar place on an unprepared cookie sheet about 2 inches apart. 
@@ -49,7 +49,7 @@ Ingredients:
 
 ------------------------------------------------------------------------------------------------------------------------------------------ 
 
-Directions: Toll House Chocolate Chip Cookies 
+|Directions: Toll House Chocolate Chip Cookies 
 
 1. Preheat oven to 375°F. 
 
