--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <center><strong><h1>This is the homework Ms.Moreno assigned. (cookbook) This is mine, feel free to copy this</h1></strong></center>
  <h2>My Cookbook 
 By Aaron Elliott                                                                                                   Period 3 
-  Culinary Arts| </h2> 
+  Culinary Arts </h2> 
 
-<p>Directions: Pillsbury Cinnamon Rolls 
+<p>|Directions: Pillsbury Cinnamon Rolls 
 Heat oven to 400 degrees Fahrenheit. Grease round cake pan. Place rolls in pan, cinnamon topping up. Bake 13 to 17 minutes or until golden brown. Spread with icing. Faster bake method: Place rolls 2 inches apart on greased cookie sheet. Bake 8 to 10 minutes at temperature above. Keep dough refrigerated. 
 
 ------------------------------------------------------------------------------------------------------------------------------------------ 
