--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <body bgcolor="#ff69B4">
+ <div id=heading>
 <center><strong><h1>This is the homework Ms.Moreno assigned. (cookbook) This is mine, feel free to copy this</h1></strong></center>
  <h2>My Cookbook 
 By Aaron Elliott                                                                                                   Period 3 
   Culinary Arts </h2> 
-
+ </div>
+ <div id=body>
 <p>|Directions: Pillsbury Cinnamon Rolls 
 Heat oven to 400 degrees Fahrenheit. Grease round cake pan. Place rolls in pan, cinnamon topping up. Bake 13 to 17 minutes or until golden brown. Spread with icing. Faster bake method: Place rolls 2 inches apart on greased cookie sheet. Bake 8 to 10 minutes at temperature above. Keep dough refrigerated. 
 
@@ -60,3 +62,4 @@ Ingredients:
 Ingredients: 
 
 2 1/4 cups all-purpose flour. 1 teaspoon baking soda. 1 teaspoon salt. 1 cup (2 sticks) butter, softened. 3/4 cup granulated sugar. 3/4 cup packed brown sugar. 1 teaspoon vanilla extract. 2 large eggs. 2 cups Nestlé Toll House Semi-Sweet Chocolate Morsels. 1 cup chopped nuts </p>
+ </div>
